--- a/frontend/src/components/styleComponents/Piece.css
+++ b/frontend/src/components/styleComponents/Piece.css
@@ -1,8 +1,12 @@
 .piece {
-    font-size: 30px; /* Mărime decentă pentru simboluri */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
+  font-size: 40px;
+  user-select: none;
+  z-index: 2;
+  cursor: grab;
+  transition: transform 0.2s;
+}
+
+.piece:active {
+  cursor: grabbing;
+  transform: scale(1.1);
+}
